correct documentation and fix layout
Inline skating documentation still had references to cycling. Also fix
link to wiki page. Changed font color in MTB map. Unreadable in black.

--- a/static/css/mtb_theme.css
+++ b/static/css/mtb_theme.css
@@ -1,13 +1,6 @@
 .header { 
     background-color: #353d6b;
-}
-
-#map_header {
-    color: #101010
-}
-
-#header {
-    color: #101010
+    color : #d4d6e1
 }
 
 .subheader {
